--- a/package.json
+++ b/package.json
@@ -13,12 +13,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
-<<<<<<< HEAD
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
-=======
-    "react-dom": "^18.3.1"
->>>>>>> main
+    "avhengighet1": "^1.0.0",
+    "avhengighet2": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
