--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
@@ -21,6 +26,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/pg": "^8.11.11",
     "@types/react": "^18.2.66",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.18",
@@ -29,8 +38,16 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "proxy": "http://localhost:5000"
 }
