--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
+    "@types/connect-history-api-fallback": "^1.5.4",
     "@types/express": "^5.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "connect-history-api-fallback": "^2.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
