--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,27 +6,21 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-
-    /* Ensure that JavaScript files can be used with TypeScript */
     "allowJs": true,
     "checkJs": false,
     "resolveJsonModule": true
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],  // Legg til vite.config.ts her
   "exclude": ["node_modules"]
 }
