--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "ts-node server/server.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "express": "^4.21.2",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/express": "^5.0.0",
     "@types/react": "^18.2.66",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.18",
@@ -31,6 +33,7 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "ts-node": "^10.9.1"
   }
 }
