--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "postgres": "^3.4.5",
     "react": "^18.3.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/react": "^18.2.66",
     "@types/react-bootstrap": "^0.32.37",
@@ -31,9 +35,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "ts-node": "^10.9.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1",
-    "ts-node": "^10.9.1"
-  }
+    "vite": "^6.0.1"
+  },
+  "proxy": "http://localhost:5000"
 }
