--- a/package.json
+++ b/package.json
@@ -4,54 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.48.1",
+    "@types/node": "^22.13.0",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
+    "connect-history-api-fallback": "^2.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "pg": "^8.13.1",
-    "postgres": "^3.4.5",
+    "express-async-handler": "^1.2.0",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/axios": "^0.9.36",
-    "@types/bcrypt": "^5.0.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/pg": "^8.11.11",
-    "@types/react": "^18.2.66",
-    "@types/react-bootstrap": "^0.32.37",
-    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "nodemon": "^3.1.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "proxy": "http://localhost:5000"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11"
+  }
 }
