--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "ts-node server/server.ts"
+    "start": "node api/server.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "@vercel/node": "^5.1.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -21,7 +22,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.1.3",
+    "undici": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
