--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "teetime",
-  "version": "0.1.0",
+  "name": "my-app",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "@next/font": "^14.2.15",
+    "@supabase/supabase-js": "^2.48.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.7",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
-  }
+    "@eslint/js": "^9.15.0",
+    "@types/next": "^8.0.7",
+    "@types/react": "^18.2.66",
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.15.0"
+  },
+  "proxy": "http://localhost:5000"
 }
