--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/leaflet": "^1.9.16",
     "@types/next": "^8.0.7",
     "@types/react": "^18.2.66",
     "@types/react-bootstrap": "^0.32.37",
