--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1"
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.15.0",
     "@types/leaflet": "^1.9.16",
     "@types/next": "^8.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.66",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.18",
